making some formatting fixes to bibliography

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -16,7 +16,7 @@
     \usepackage[margin=20mm]{geometry} % set exact margins for thesis
 
 % REFERENCES
-    \usepackage[firstinits=true, backend=biber, style=authoryear]{biblatex}
+    \usepackage[firstinits=true, backend=biber, style=authoryear, url=false, isbn=false, doi=false, eprint=false]{biblatex}
     \DeclareNameAlias{sortname}{last-first}
 
     \addbibresource{../../../BibTex_files/03_Chapter3.bib}
