adding refs to supps parag

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -402,10 +402,8 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 
     This code is also available in the Supplementary Methods zip folder under the name 'joint\_model.stan', alongside the R scripts and functions used to prepare the data and call upon STAN to run the model. \\
 
-    \textbf{
-    We make the following observations in addition to the comments in the code. Firstly, realised interactions (beta\_ij in the code) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. The Supplementary Methods zip folder also contains the data\_prep.R file, which will show how to calculate these vectors from the input data. 
-    Secondly, we define the effect parameters as a unit vector, which means we only require S-1 degrees of freedom to estimate all effect values. Thirdly, the first response parameter is forced to positive. This improves convergence by providing an anchor for all other parameter values to 'rotate' around. Though these latter two have implications for our estimates of the latent variables $r_i$ and $e_j$, estimates for realised and unrealised interactions should not be affected.
-    }
+    We make the several observations in addition to the comments in the code. Firstly, realised interactions (beta\_ij in the code) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. The Supplementary Methods zip folder also contains the data\_prep.R file, which will show how to calculate these vectors from the input data. 
+    Secondly, we impose the following constraints to improve convergence, reduce over-parameterisation and maintain identifiability of our latent variables $r_i$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. We define the effect parameters as a unit vector, which means we only require K-1 degrees of freedom (where K is the total number of neighbour elements) to estimate all effect values. This loss of a degree of freedom arises from the fact that the matrix of $r_i$ $e_j$ parameters is of rank 1. The first response parameter is also forced to positive. This improves convergence by providing an anchor for all other parameter values to 'rotate' around. Though these latter two have implications for our estimates of the latent variables $r_i$ and $e_j$, estimates for realised and unrealised interactions should not be affected.
 
     \includepdf[pages=-]{joint_model.stan.pdf}
 
