--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -14,6 +14,8 @@
     \usepackage{listings} % allows me to insert code 
     \usepackage{pdfpages}
     \usepackage[margin=20mm]{geometry} % set exact margins for thesis
+    \usepackage{caption} % allows doublespacing of captions
+    \captionsetup{font=doublespacing}
 
 % REFERENCES
     \usepackage[firstinits=true, backend=biber, style=authoryear, url=false, isbn=false, doi=false, eprint=false]{biblatex}
@@ -91,7 +93,7 @@ Data will be submitted to Dryad upon publication.
 % Submit to Ecology Letters as a Method
 
     \paragraph{}
-    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Quantifying these interaction matrices from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of element performance in the absence and presence of their potential interaction partners. The resulting interaction matrices can include positive and negative effects, the effect of an element on itself, and are non-symmmetrical. The advantages of these features are illustrated with a case study on an annual wildflower community of 22 focal and 52 neighbouring species, with potential applications of this framework extending well beyond plant community ecology.}
+    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Quantifying these interaction matrices from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of element performance in the absence and presence of their potential interaction partners. The resulting interaction matrices can include positive and negative effects, the effect of an element on itself, and are non-symmetrical. The advantages of these features are illustrated with a case study on an annual wildflower community of 22 focal and 52 neighbouring species, with potential applications of this framework extending well beyond plant community ecology.}
 
 
 
@@ -233,13 +235,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     %         \item interaction estimates for the REM peak around 0 - which can only occur if $r_i$ or $e_j$ are 0 - can discuss when this might occur (1. there exists true 0's such that some species have no effects on others - 2. some species might have both positive and negative effects so averages to 0 - 3. prior is centered on 0 and signal is too weak to be picked up)
 
 
-    \begin{figure}[H]
-       % \hspace*{-3.5cm}
-        \includegraphics[width=.6\textwidth]{../2.analyses/figures_mss/postpredch.png}
-        \caption{Posterior predictive check showing the density distribution of observed seed production values (red line) to simulated seed production values (light grey), on a log scale. Simulated values were generated using the 80\% posterior confidence intervals for each parameter, the black line shows simulated values using the median of each parameter. }
-        \label{fig:ppcheck}
-    \end{figure}
-  
+    
 
 %     \subsection{Rescaling the interactions}
     
@@ -266,15 +262,6 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
      \paragraph{}
      We applied the same data to the cooccur package in R \parencite{Griffith2016} to build a spatial-association network, a common alternative to inferring interactions in diverse systems. Species associations (Figure \ref{fig:netwks}.C) were all negative (competitive), symmetrical, and the association between a species and itself (the equivalent to intraspecific interactions) cannot be estimated. Together, these aspects make species association networks qualitatively different to the interaction networks returned by our framework. 
 
-
-       \begin{figure}[H]
-        \begin{centering}
-        % Looks like GITE is in larger font???
-        \includegraphics[width=0.5\textwidth]{../2.analyses/figures_mss/networks_C_F_cooc.png}
-        \caption{Competitive (A) and facilitative (B) per-capita interaction networks estimated from our model framework, compared to an association network (C) estimated from the same data using the cooccur package in R \parencite{Griffith2016}. Competitive and facilitative interactions (A and B) are here shown separately for ease of view but were analysed together. Only focal species are included in these networks, arrows point to species $i$ and line thickness denotes interaction strength. Interaction strengths for (A) and (B) are given as the median over 1000 samples. Species associations (C) were all negative and symmetrical. Purple coloured nodes correspond to highly abundant native species, whereas green nodes indicate potential keystone species, as further described in Figure \ref{fig:species}.}
-        \label{fig:netwks}
-       \end{centering}
-    \end{figure}    
 
 
 
@@ -303,31 +290,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     % We calculated .... 
 
 
-    \begin{figure}[H]
-        \begin{centering}
-        \includegraphics[width=0.4\textwidth]{../2.analyses/figures_mss/species_effects.png}
-        \caption{(Caption next page.)}
-        \label{fig:species}
-        \end{centering}
-    \end{figure} 
-
-    \addtocounter{figure}{-1}
-	\begin{figure} [t!]
-  		\caption{(Previous page.) Understanding interaction effects can help identify species of particular ecological importance to a system. For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. The shaded part of the graphs show facilitative (negative) interactions. Dashed lines represent the median value for all focals. Coloured triangles indicate the species refered to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
-        In (A), the x-axis shows the strength of per-capita intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' log abundance (y-axis). Values over $0$ indicate competition, and values less than $0$ indicate facilitation.  The two most abundant natives, \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) in purple, do not seem to compete with themselves any more or less strongly than the median for all species in the system (dashed line). \\
-        (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against the focal species' log abundance (x-axis). On the x-axis, values greater than $0$ indicate that a focal species has an overall competitive effect on neighbours, and values less than $0$ indicate that it has an overall facilitative effect. Green diamonds identify species with low abundance but strong competitive effects on neighbours: \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). \\
-        (C) decomposes a focal species' net interaction effects into its competitive effects (x-axis) and facilitative effects (y-axis). Red diamonds show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI).} 
-	\end{figure}
-
-
-    \begin{figure}[H]
-        \begin{centering}
-        \includegraphics[width=0.4\textwidth]{../2.analyses/figures_mss/cooccur_vs_abund.png}
-        \caption{Absolute sum of focal species association strengths as returned by the cooccur package (x-axis), plotted against their log abundance (y-axis). Dashed lines are the median for all focals. In green are the same potential keystone species as identified in Fig. \ref{fig:species}.B: \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). Because association strengths are derived from abundances, rare species also tend to have weaker summed association strengths which makes identifying potential keystone species challenging.}
-        \label{fig:coocab}
-        \end{centering}
-    \end{figure} 
-
+    
 
 \section{Discussion}
     
@@ -384,9 +347,69 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 % \bibliography{../../../BibTex_files/03_Chapter3}
 % \bibliographystyle{plainnat}
 
+\section*{Acknowledgements}
+
+We thank M. Raymundo \& I. Towers for the seed rate data used in this paper, C. Bowler, T. Britton, and J. Ikin for their work in sample processing for this data set, as well as Rob Freckleton and Jacopo Grilli for insightful comments on the manuscript. This work was made possible by funding awarded to M.M.M. (DP170100837) by the Australian Research Council. D.B.S. is grateful for the support of the Marsden Fund Council, from New Zealand Government funding (grant 16-UOC-008).
+
+
+\section*{Competing interests}
+
+The authors declare no competing interests. 
+
+
 \newpage
 
 \printbibliography   
+
+\newpage 
+
+\section{Figures}
+
+
+    \begin{figure}[H]
+       % \hspace*{-3.5cm}
+        \includegraphics[width=.6\textwidth]{../2.analyses/figures_mss/postpredch.png}
+        \caption{Posterior predictive check showing the density distribution of observed seed production values (red line) to simulated seed production values (light grey), on a log scale. Simulated values were generated using the 80\% posterior confidence intervals for each parameter, the black line shows simulated values using the median of each parameter. }
+        \label{fig:ppcheck}
+    \end{figure}
+
+    \begin{figure}[H]
+        \begin{centering}
+        % Looks like GITE is in larger font???
+        \includegraphics[width=0.5\textwidth]{../2.analyses/figures_mss/networks_C_F_cooc.png}
+        \caption{Competitive (A) and facilitative (B) per-capita interaction networks estimated from our model framework, compared to an association network (C) estimated from the same data using the cooccur package in R \parencite{Griffith2016}. Competitive and facilitative interactions (A and B) are here shown separately for ease of view but were analysed together. Only focal species are included in these networks, arrows point to species $i$ and line thickness denotes interaction strength. Interaction strengths for (A) and (B) are given as the median over 1000 samples. Species associations (C) were all negative and symmetrical. Purple coloured nodes correspond to highly abundant native species, whereas green nodes indicate potential keystone species, as further described in Figure \ref{fig:species}.}
+        \label{fig:netwks}
+       \end{centering}
+    \end{figure}  
+
+
+    \begin{figure}[H]
+        \begin{centering}
+        \includegraphics[width=0.4\textwidth]{../2.analyses/figures_mss/species_effects.png}
+        \caption{(Caption next page.)}
+        \label{fig:species}
+        \end{centering}
+    \end{figure} 
+
+    \addtocounter{figure}{-1}
+    \begin{figure} [t!]
+        \caption{(Previous page.) Understanding interaction effects can help identify species of particular ecological importance to a system. For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. The shaded part of the graphs show facilitative (negative) interactions. Dashed lines represent the median value for all focals. Coloured triangles indicate the species refered to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
+        In (A), the x-axis shows the strength of per-capita intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' log abundance (y-axis). Values over $0$ indicate competition, and values less than $0$ indicate facilitation.  The two most abundant natives, \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) in purple, do not seem to compete with themselves any more or less strongly than the median for all species in the system (dashed line). \\
+        (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against the focal species' log abundance (x-axis). On the x-axis, values greater than $0$ indicate that a focal species has an overall competitive effect on neighbours, and values less than $0$ indicate that it has an overall facilitative effect. Green diamonds identify species with low abundance but strong competitive effects on neighbours: \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). \\
+        (C) decomposes a focal species' net interaction effects into its competitive effects (x-axis) and facilitative effects (y-axis). Red diamonds show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI).} 
+    \end{figure}
+
+\clearpage
+\newpage
+
+    \begin{figure}[H]
+        \begin{centering}
+        \includegraphics[width=0.4\textwidth]{../2.analyses/figures_mss/cooccur_vs_abund.png}
+        \caption{Absolute sum of focal species association strengths as returned by the cooccur package (x-axis), plotted against their log abundance (y-axis). Dashed lines are the median for all focals. In green are the same potential keystone species as identified in Fig. \ref{fig:species}.B: \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). Because association strengths are derived from abundances, rare species also tend to have weaker summed association strengths which makes identifying potential keystone species challenging.}
+        \label{fig:coocab}
+        \end{centering}
+    \end{figure} 
+
 
 \newpage 
 
