--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -21,7 +21,7 @@
     \usepackage[firstinits=true, backend=biber, style=authoryear, url=false, isbn=false, doi=false, eprint=false]{biblatex}
     \DeclareNameAlias{sortname}{last-first}
 
-    \addbibresource{../../../BibTex_files/03_Chapter3.bib}
+    \addbibresource{../../../../BibTex_files/03_Chapter3.bib}
 
 % GRAPHICS
     \usepackage{graphicx} % More advanced figure inclusion
@@ -368,7 +368,7 @@ The authors declare no competing interests.
 
     \begin{figure}[H]
        % \hspace*{-3.5cm}
-        \includegraphics[width=.6\textwidth]{../2.analyses/figures_mss/postpredch.png}
+        \includegraphics[width=.6\textwidth]{../../2.analyses/figures_mss/postpredch.png}
         \caption{Posterior predictive check showing the density distribution of observed seed production values (red line) to simulated seed production values (light grey), on a log scale. Simulated values were generated using the 80\% posterior confidence intervals for each parameter, the black line shows simulated values using the median of each parameter. }
         \label{fig:ppcheck}
     \end{figure}
@@ -376,7 +376,7 @@ The authors declare no competing interests.
     \begin{figure}[H]
         \begin{centering}
         % Looks like GITE is in larger font???
-        \includegraphics[width=0.5\textwidth]{../2.analyses/figures_mss/networks_C_F_cooc.png}
+        \includegraphics[width=0.5\textwidth]{../../2.analyses/figures_mss/networks_C_F_cooc.png}
         \caption{Competitive (A) and facilitative (B) per-capita interaction networks estimated from our model framework, compared to an association network (C) estimated from the same data using the cooccur package in R \parencite{Griffith2016}. Competitive and facilitative interactions (A and B) are here shown separately for ease of view but were analysed together. Only focal species are included in these networks, arrows point to species $i$ and line thickness denotes interaction strength. Interaction strengths for (A) and (B) are given as the median over 1000 samples. Species associations (C) were all negative and symmetrical. Purple coloured nodes correspond to highly abundant native species, whereas green nodes indicate potential keystone species, as further described in Figure \ref{fig:species}.}
         \label{fig:netwks}
        \end{centering}
@@ -385,7 +385,7 @@ The authors declare no competing interests.
 
     \begin{figure}[H]
         \begin{centering}
-        \includegraphics[width=0.4\textwidth]{../2.analyses/figures_mss/species_effects.png}
+        \includegraphics[width=0.4\textwidth]{../../2.analyses/figures_mss/species_effects.png}
         \caption{(Caption next page.)}
         \label{fig:species}
         \end{centering}
@@ -404,7 +404,7 @@ The authors declare no competing interests.
 
     \begin{figure}[H]
         \begin{centering}
-        \includegraphics[width=0.4\textwidth]{../2.analyses/figures_mss/cooccur_vs_abund.png}
+        \includegraphics[width=0.4\textwidth]{../../2.analyses/figures_mss/cooccur_vs_abund.png}
         \caption{Absolute sum of focal species association strengths as returned by the cooccur package (x-axis), plotted against their log abundance (y-axis). Dashed lines are the median for all focals. In green are the same potential keystone species as identified in Fig. \ref{fig:species}.B: \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). Because association strengths are derived from abundances, rare species also tend to have weaker summed association strengths which makes identifying potential keystone species challenging.}
         \label{fig:coocab}
         \end{centering}
@@ -523,7 +523,7 @@ The authors declare no competing interests.
 
     \begin{figure}[H]
        % \hspace*{-3.5cm}
-        \includegraphics[width=\textwidth]{../2.analyses/figures_mss/interaction_estimates.png}
+        \includegraphics[width=\textwidth]{../../2.analyses/figures_mss/interaction_estimates.png}
         \caption{Distribution of interaction estimates from our case study. Parameter estimates are sampled from the 80\% posterior confidence intervals returned by STAN. Upper left panel shows the distribution of observed interactions as estimated by the NDDM ($\beta_{ij}$), which are then plotted against the corresponding RIM estimates ($r_i e_j$, x-axis) in the upper right panel. Bottom rows show the distribution of \textit{unrealised} (left) and observed interactions estimates returned by the RIM. Interaction estimates are unscaled.}
         \label{fig:adist}
     \end{figure}
